# sync-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: Doxygen
example/: CMakeLists.txt  main.cpp  print.hpp
include/: sync_smart_ptr.hpp
include/sync_cpp/: concepts.hpp  group.hpp  sync.hpp  sync_container.hpp  sync_opt.hpp  sync_smart_ptr.hpp
include/sync_cpp/detail/: concepts.hpp
test/: CMakeLists.txt  conanfile.py  sync_container_test.cpp  sync_opt_test.cpp  sync_smart_ptr_test.cpp  sync_test.cpp  sync_test.cpp.bak
test/cmake/: fetched-libs.cmake
